--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <p> Etudiant en école d'ingénieur, passionné par la programmation et le développement web, 
         ce portofolio est un moyen pour moi de présenter mes compétences, mes projets et mon parcours académique.
     </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error magni perspiciatis laboriosam pariatur placeat atque reiciendis harum veniam modi similique doloremque asperiores quasi dignissimos nobis natus, voluptatem cupiditate quisquam enim</p>
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/zoléni-kokolo-zassi-280a282ba" target="_blank"> <i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
         <a href="https://github.com/Sikoso774" target="_blank"> <i class="fa-brands fa-github" aria-hidden="true"></i></a>
@@ -41,5 +42,7 @@
     </div>
     
 </section>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem aliquam enim quisquam fugit voluptatum similique ratione non facere nihil, voluptatem distinctio maxime quas excepturi consequuntur eum ducimus nam illum vero.
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ut, laboriosam eaque tempore cupiditate atque non voluptas error eius nisi corrupti molestiae quos iure unde quasi culpa iusto? Alias, sint!</p>
 </body>
 </html>
