--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                         </svg>
                         GitHub
                     </a>
-                    <a href="#" class="btn-primary" onclick="alert('CV download functionality'); return false;">
+                    <a  href="assets/docs/CV Zoléni.pdf" 
+                        class="btn-primary" 
+                        download="CV_Zoléni_Kokolo_Zassi.pdf">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
                             <polyline points="7 10 12 15 17 10"></polyline>
