--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="#hero" class="logo">
-                    <div class="logo-circle">ZK</div>
+                    <div class="logo-circle"> ZK</div>
                     <span class="logo-text">Zoléni Kokolo</span>
                 </a>
 
@@ -72,7 +72,7 @@
             <div class="hero-grid">
                 <div class="hero-image">
                     <div class="profile-halo"></div>
-                    <div class="profile-circle">ZK</div>
+                    <div class="profile-circle"> <img src="assets/images/photo_profile.jpg" alt="Test"></div>
                 </div>
                 <div class="hero-content">
                     <div class="badge">Welcome to my portfolio</div>
@@ -81,6 +81,13 @@
                     <div class="hero-buttons">
                         <a href="#projects" class="btn-primary">See My Work →</a>
                         <a href="#contact" class="btn-outline">Get in Touch</a>
+                        <a 
+                        href="https://www.linkedin.com/in/zoléni-kokolo-zassi-280a282ba" 
+                        class="btn-linkedin"
+                        target="_blank"
+                        >
+                    LinkedIn Profile
+                        </a>
                     </div>
                 </div>
             </div>
@@ -238,10 +245,10 @@
                     <p>A 2nd year ENSEA project showcasing innovative approaches to interactive applications. Built with modern technologies and focusing on user experience.</p>
                     <div class="tags">
                         <span>Python</span>
-                        <span>Data Science</span>
+                        <span><a href="https://pyga.me/docs" target="_blank">Pygame</a></span>
                         <span>Web Development</span>
                     </div>
-                    <a href="https://github.com/Sikoso774/HYPNOTICA" target="_blank" class="btn-outline">
+                    <a href="https://github.com/Sikoso774/HYPNOTICA_V4" target="_blank" class="btn-outline">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
                         </svg>
